#24 Change app properties file

--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -27,5 +27,5 @@ spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.username=user
 spring.mail.password=123
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
