--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.jpa.show-sql=true
 
 # Email configurations
 spring.mail.host=localhost
-spring.mail.port=32769
+spring.mail.port=1025
 spring.mail.username=user
 spring.mail.password=123
-spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
