#24 Changed properties maildev(1)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 
 # -B batch mode makes Maven less verbose
 script:
+  - maildev --outgoing-host localhost
+  - maildev --outgoing-user user
+  - maildev --outgoing-pass 123
   - mvn -B clean verify
-  - maildev --incoming-user user
-  - maildev --incoming-pass 123
