--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Email configurations
-spring.mail.host=localhost
-spring.mail.port=1025
+spring.mail.host=192.168.99.100
+spring.mail.port=32768
 spring.mail.username=user
 spring.mail.password=123
 spring.mail.properties.mail.smtp.auth=true
