#24 Changed properties maildev(5)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ services:
   - docker
 
 # -B batch mode makes Maven less verbose
-before_install:
+install:
   - docker pull djfarrelly/maildev
   - docker run -p 1080:80 -p 1025:25 djfarrelly/maildev
-  -  docker-machine ip maildev
 
 script:
   - mvn -B clean verify
