#24 Show ip address of docker machine(3)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 install:
   - docker run -d -p 1080:80 -p 1025:25 djfarrelly/maildev
-  - docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' djfarrelly/maildev
+  - docker inspect djfarrelly/maildev | grep "IPAddress" djfarrelly/maildev
 
 script:
   - mvn -B clean verify
