#24 Show ip address of docker machine(6)

--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -23,9 +23,9 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Email configurations
-spring.mail.host=192.168.99.100
-spring.mail.port=32768
+spring.mail.host=localhost
+spring.mail.port=1025
 spring.mail.username=user
 spring.mail.password=123
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
