--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - docker
 
 # -B batch mode makes Maven less verbose
+# Useles change
 before_install:
   - docker pull djfarrelly/maildev
 
@@ -16,3 +17,15 @@ install:
 
 script:
   - mvn -B clean verify
+
+git:
+if: branch IS master
+
+after_success:
+  - cp $TRAVIS_BUILD_DIR/integration-tests/target/generated-docs/readme.html $TRAVIS_BUILD_DIR/docs/index.html
+  - git config user.name "${GH_USER_NAME}"
+  - git config user.email "${GH_USER_EMAIL}"
+  - git checkout master
+  - git add .
+  - git commit -m "#18 Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER} [ci skip]"
+  - git push --quiet "https://${GH_TOKEN}@${GH_REF}"
