--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -51,6 +51,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.0.12.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
