#25 Added mail utility and corrected lines of UserProfile

--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.0.12.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
