--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,6 +26,8 @@
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
         <org.zalando.jackson-datatype-money.version>1.0.2</org.zalando.jackson-datatype-money.version>
+        <spring-boot-starter-mail>1.4.3.RELEASE</spring-boot-starter-mail>
+        <spring-context-support-ver>5.1.0.BUILD-SNAPSHOT</spring-context-support-ver>
     </properties>
 
     <dependencies>
