#25 Changed security conf

--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -53,6 +53,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>${spring-boot-starter-mail}</version>
+        </dependency>
     </dependencies>
 
     <build>
