--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -18,6 +18,12 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
+
+# Email configurations
+spring.mail.host=192.168.99.100
+spring.mail.port=32768
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
