#24 Modified poms and added new bean to correct errors in tests

--- a/user-profile/src/test/resources/application-integration-test.properties
+++ b/user-profile/src/test/resources/application-integration-test.properties
@@ -9,3 +9,10 @@ spring.datasource.url=jdbc:hsqldb:mem:dataSource
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+hibernate.connection.driver_class"=org.postgresql.Driver
+
+# Email configurations
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
