--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.1.0.BUILD-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <packaging>pom</packaging>
@@ -20,12 +20,11 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <org.apache.maven.wagon.wagon-ftp.version>3.1.0</org.apache.maven.wagon.wagon-ftp.version>
+        <org.apache.maven.wagon.wagon-ftp.version>1.0-beta-6</org.apache.maven.wagon.wagon-ftp.version>
 
         <!-- dependency versions-->
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
-<<<<<<< HEAD
         <org.zalando.jackson-datatype-money.version>1.0.0-RC2</org.zalando.jackson-datatype-money.version>
         <version.eye>3.11.4</version.eye>
         <org.springframework.security.ver>5.1.0.BUILD-SNAPSHOT</org.springframework.security.ver>
@@ -34,9 +33,7 @@
         <spring-beans-ver>5.1.0.BUILD-SNAPSHOT</spring-beans-ver>
         <hibernate-core-ver>5.0.12.Final</hibernate-core-ver>
         <spring-boot-starter-mail>1.4.3.RELEASE</spring-boot-starter-mail>
-=======
         <org.zalando.jackson-datatype-money.version>1.0.2</org.zalando.jackson-datatype-money.version>
->>>>>>> master
     </properties>
 
     <dependencies>
