--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,6 +21,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <org.apache.maven.wagon.wagon-ftp.version>1.0-beta-6</org.apache.maven.wagon.wagon-ftp.version>
+        <asciidoctor-maven-plugin.version>1.5.6</asciidoctor-maven-plugin.version>
+        <replacer-maven-plugin.version>1.5.3</replacer-maven-plugin.version>
 
         <!-- dependency versions-->
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
@@ -88,19 +90,21 @@
                 <artifactId>mockito-kotlin</artifactId>
                 <version>${com.nhaarman.mockito-kotlin.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>commons-net</groupId>
                 <artifactId>commons-net</artifactId>
                 <version>${commons-net.commons-net.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-test-junit</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>${org.javamoney.moneta.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.zalando</groupId>
                 <artifactId>jackson-datatype-money</artifactId>
@@ -158,6 +162,20 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.asciidoctor</groupId>
+                    <artifactId>asciidoctor-maven-plugin</artifactId>
+                    <version>${asciidoctor-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.google.code.maven-replacer-plugin</groupId>
+                    <artifactId>replacer</artifactId>
+                    <version>${replacer-maven-plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
