--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,7 +22,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <org.apache.maven.wagon.wagon-ftp.version>1.0-beta-6</org.apache.maven.wagon.wagon-ftp.version>
         <wagon-ftp.version>3.1.0</wagon-ftp.version>
-        <asciidoctor-maven-plugin.version>1.5.6</asciidoctor-maven-plugin.version>
+        <asciidoctor-maven-plugin.version>2.0.1.RELEASE</asciidoctor-maven-plugin.version>
         <replacer-maven-plugin.version>1.5.3</replacer-maven-plugin.version>
 
         <!-- dependency versions-->
@@ -197,6 +197,32 @@
                     <groupId>org.asciidoctor</groupId>
                     <artifactId>asciidoctor-maven-plugin</artifactId>
                     <version>${asciidoctor-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>generate-docs</id>
+                            <phase>post-integration-test</phase>
+                            <goals>
+                                <goal>process-asciidoc</goal>
+                            </goals>
+                            <configuration>
+                                <backend>html</backend>
+                                <doctype>book</doctype>
+                                <attributes>
+                                    <!-- see readme.adoc -->
+                                    <project-name>${project.name}</project-name>
+                                    <project-version>${project.version}</project-version>
+                                    <final-name>${project.build.finalName}</final-name>
+                                </attributes>
+                            </configuration>
+                        </execution>
+                    </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.springframework.restdocs</groupId>
+                            <artifactId>spring-restdocs-asciidoctor</artifactId>
+                            <version>${asciidoctor-maven-plugin.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>com.google.code.maven-replacer-plugin</groupId>
