--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web-services</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
