--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,23 @@
+# This is a sample build configuration for TravisCI
 sudo: required
 
-# This is a sample build configuration for TravisCI
 language: java
 
 services:
   - docker
 
 # -B batch mode makes Maven less verbose
-# Useles change
 script:
   - mvn -B clean verify
 
 git:
-if: branch IS master
-
-after_success:
-  - cp $TRAVIS_BUILD_DIR/integration-tests/target/generated-docs/readme.html $TRAVIS_BUILD_DIR/docs/index.html
-  - git config user.name "${GH_USER_NAME}"
-  - git config user.email "${GH_USER_EMAIL}"
-  - git checkout master
-  - git add .
-  - git commit -m "Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER} [ci skip]"
-  - git push --quiet "https://${GH_TOKEN}@${GH_REF}"
+  if: branch IS master
+    after_success:
+      # copy generated documentation to github pages directory
+      - cp $TRAVIS_BUILD_DIR/integration-tests/target/generated-docs/readme.html $TRAVIS_BUILD_DIR/docs/index.html
+      - git config user.name "${GH_USER_NAME}"
+      - git config user.email "${GH_USER_EMAIL}"
+      - git checkout master
+      - git add .
+      - git commit -m "Deploy to GitHub Pages number ${TRAVIS_BUILD_NUMBER} [ci skip]"
+      - git push --quiet "https://${GH_TOKEN}@${GH_REF}"
