Create Java file-upload module

--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -35,6 +35,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>user-profile</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>file-upload</artifactId>
+        </dependency>
 
         <!-- External dependencies-->
         <dependency>
