--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -78,6 +78,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>file-upload</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>core</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -86,6 +91,11 @@
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
                 <artifactId>runtime-cli</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>fileupload</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -138,7 +148,7 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
-            <!-- Kotlin compiler -->
+             <!--Kotlin compiler-->
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -163,7 +173,7 @@
                 </dependencies>
             </plugin>
 
-            <!-- create test jars -->
+             <!--create test jars-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
