--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>integration-tests</module>
         <module>runtime-cli</module>
         <module>user-profile</module>
+        <module>file-upload</module>
     </modules>
 
     <properties>
