--- a/user-profile/src/test/resources/application-integration-test.properties
+++ b/user-profile/src/test/resources/application-integration-test.properties
@@ -8,10 +8,8 @@
 spring.datasource.url=jdbc:hsqldb:mem:dataSource
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Email configurations
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.host=192.168.99.100
+spring.mail.port=32768
