#25 Made tests work

--- a/user-profile/src/test/resources/application-integration-test.properties
+++ b/user-profile/src/test/resources/application-integration-test.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:hsqldb:mem:dataSource
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+# Email configurations
+spring.mail.host=localhost
+spring.mail.port=1025
