--- a/user-profile/src/test/resources/application-integration-test.properties
+++ b/user-profile/src/test/resources/application-integration-test.properties
@@ -11,5 +11,5 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 
 # Email configurations
-spring.mail.host=192.168.99.100
-spring.mail.port=32768
+spring.mail.host=localhost
+spring.mail.port=1025
