--- a/user-profile/src/test/resources/application-integration-test.properties
+++ b/user-profile/src/test/resources/application-integration-test.properties
@@ -8,7 +8,7 @@
 spring.datasource.url=jdbc:hsqldb:mem:dataSource
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create 
 
 # Email configurations
 spring.mail.host=localhost
