--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,6 +28,7 @@
         <com.nhaarman.mockito-kotlin.version>1.6.0</com.nhaarman.mockito-kotlin.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
         <org.zalando.jackson-datatype-money.version>1.0.2</org.zalando.jackson-datatype-money.version>
+        <detekt-maven-plugin-version>1.0.0.RC7-3</detekt-maven-plugin-version>
     </properties>
 
     <dependencies>
@@ -181,6 +182,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+
+            <!-- Detekt maven plugin -->
+            <plugin>
+                <groupId>com.github.ozsie</groupId>
+                <artifactId>detekt-maven-plugin</artifactId>
+                <version>${detekt-maven-plugin-version}</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals><goal>check</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -226,6 +240,15 @@
     </repositories>
 
     <pluginRepositories>
+        <pluginRepository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>bintray-ozsie-maven</id>
+            <name>bintray-plugins</name>
+            <url>https://dl.bintray.com/ozsie/maven</url>
+        </pluginRepository>
+
         <pluginRepository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
