#25 email change process (#48)
* #25 Created controller,service and entity v1(no tests done)

* #25 Corrected entity

* #25 Added mail utility and corrected lines of UserProfile

* #25 Added dependencies in poms

* #25 Changed security conf

* #25 Added functionality to save request method

* #25 Added the email verification process

* #25 Updated auth service

* #25 Added User profile funcionality

* #25 Added email verification with id

* #25 Made confirmEmail work, made manual tests

* #25 Refactored code

* #25 Refactored code

* #25  Refactored code

* #25 Refactored code(2)

* #25 Deleted ;

* #25 Made massive changes refactoring code, did tests. Every thing working

* #25 Made tests work

* #25 Refactoref code

* #25 Refactored code and corrected errors

* #25 Refactored code(Hope last time)

* #25 Refactored code(hope the last v2)

* #25 Refactored code v3

* #25 Corrected tests

* #25 Deleted errors

--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -73,9 +73,34 @@
         </dependency>  
 
         <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+
+
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+
     </dependencies>
+
 </project>
