--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,6 @@
         <com.nhaarman.mockito-kotlin.version>1.6.0</com.nhaarman.mockito-kotlin.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
         <org.zalando.jackson-datatype-money.version>1.0.2</org.zalando.jackson-datatype-money.version>
-        <detekt-maven-plugin-version>1.0.0.RC7-3</detekt-maven-plugin-version>
     </properties>
 
     <dependencies>
@@ -183,18 +182,21 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
 
-            <!-- Detekt maven plugin -->
             <plugin>
-                <groupId>com.github.ozsie</groupId>
-                <artifactId>detekt-maven-plugin</artifactId>
-                <version>${detekt-maven-plugin-version}</version>
+                <groupId>com.github.gantsign.maven</groupId>
+                <artifactId>ktlint-maven-plugin</artifactId>
+                <version>0.9.4</version>
                 <executions>
                     <execution>
-                        <phase>verify</phase>
-                        <goals><goal>check</goal></goals>
+                        <id>format-and-check</id>
+                        <goals>
+                            <goal>format</goal>
+                            <goal>check</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
         <pluginManagement>
             <plugins>
@@ -242,13 +244,12 @@
     <pluginRepositories>
         <pluginRepository>
             <snapshots>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </snapshots>
-            <id>bintray-ozsie-maven</id>
-            <name>bintray-plugins</name>
-            <url>https://dl.bintray.com/ozsie/maven</url>
+            <id>bintray-gantsign-maven</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/gantsign/maven</url>
         </pluginRepository>
-
         <pluginRepository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
