--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -192,6 +192,9 @@
                     <execution>
                         <phase>verify</phase>
                         <goals><goal>check</goal></goals>
+                        <configuration>
+                            <input>"${basedir}\..\user-profile\src\main\kotlin"</input>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
