--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -202,7 +202,10 @@
                         <phase>verify</phase>
                         <goals><goal>check</goal></goals>
                         <configuration>
-                            <input>"${basedir}\..\user-profile\src\main\kotlin"</input>
+                            <!--next path is for linux or travis-->
+                            <input>"${basedir}/../user-profile/src/main/kotlin"</input>
+                            <!--next path is for windows-->
+                            <!--<input>"${basedir}\..\user-profile\src\main\kotlin"</input>-->
                         </configuration>
                     </execution>
                 </executions>
