#23 bin file upload (#53)
* Create Java file-upload module

* Create controllers, ervices, utils and test for the file upload feature

* Merge branch 'master' of https://github.com/systemkern/launcher

# Conflicts:
#	user-profile/src/main/kotlin/systemkern/profile/configuration.kt

* Merge branch 'master' of https://github.com/systemkern/launcher

# Conflicts:
#	user-profile/src/main/kotlin/systemkern/profile/configuration.kt

* Create a module called file-upload in order to create an API services to
send binary files which will be persisted on the server side

The controller is separated from the persistence (Service)

Currently is saved in a temporary directory configurable

The endpoint return the persisted entity in HATEOAS format

Upload and download should is tested via integration tests and Service
built is unit tested as well

* Update FileControllerTest.java

* Code review ordering dependencies, delete MyFileNotFoundException,
add TempFile in FileControllerTest downloadFile test and remove
commented code in tests.

--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>file-upload</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>user-profile</artifactId>
         </dependency>
 
