--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
 
     <modules>
         <module>core</module>
-        <module>parent</module>
+        <module>file-upload</module>
         <module>integration-tests</module>
+        <module>parent</module>
         <module>runtime-cli</module>
         <module>user-profile</module>
     </modules>
