Added first ssl configuration for connection to telegram

--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -25,3 +25,12 @@ spring.jpa.show-sql=true
 # Email configurations
 spring.mail.host=localhost
 spring.mail.port=1025
+
+# Ssl configurations
+
+server.ssl.keyStore=/path/to/keystore.p12
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyStorePassword=YOUR_PASSWORD
+server.ssl.keyPassword=YOUR_PASSWORD
+
+token=YOUR_BOT_TOKEN
