Added configuration to Chatbot(still not updating)

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -90,6 +90,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
+                <artifactId>hermes</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
                 <artifactId>runtime-cli</artifactId>
                 <version>${project.version}</version>
             </dependency>
