--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -31,9 +31,15 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>core</artifactId>
         </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>user-profile</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>hermes</artifactId>
         </dependency>
 
         <!-- External dependencies-->
@@ -57,6 +63,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegramapi</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
