--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -28,9 +28,12 @@ spring.mail.port=1025
 
 # Ssl configurations
 
-server.ssl.keyStore=/path/to/keystore.p12
+server.ssl.keyStore=C:/Users/Asus/keystore.p12
 server.ssl.keyStoreType=PKCS12
-server.ssl.keyStorePassword=YOUR_PASSWORD
-server.ssl.keyPassword=YOUR_PASSWORD
+server.ssl.keyStorePassword=hermes_pass
+server.ssl.keyPassword=hermes_pass
 
-token=YOUR_BOT_TOKEN
+token=643325373:AAHEBUDHm6HitMAKiT4b3aulQyWwQoRsot8
+
+#Experimental conf
+spring.boot.admin.notify.telegram.enabled=true
