--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xabgesagtx</groupId>
+            <artifactId>telegram-spring-boot-starter</artifactId>
+            <version>0.18</version>
+        </dependency>
+
     </dependencies>
 
     <build>
