--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -31,8 +31,10 @@
         <org.zalando.jackson-datatype-money.version>1.0.0-RC2</org.zalando.jackson-datatype-money.version>
         <version.eye>3.11.4</version.eye>
         <spring-integration-core>5.1.0.BUILD-SNAPSHOT</spring-integration-core>
-        <spring-beans-ver>5.1.0.BUILD-SNAPSHOT</spring-beans-ver>
         <org.zalando.jackson-datatype-money.version>1.0.2</org.zalando.jackson-datatype-money.version>
+        <telegram-spring-boot-starter>0.18</telegram-spring-boot-starter>
+        <telegram-bots-ver>4.0.1</telegram-bots-ver>
+        <telegram-api-ver>66.2</telegram-api-ver>
     </properties>
 
     <dependencies>
