--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.jpa.show-sql=true
 # Email configurations
 spring.mail.host=localhost
 spring.mail.port=1025
+
+#Hermes configurations
+hermesToken={hermesToken}
+hermesBotName={hermesBotName}
