#26 Fix Detekt configuration

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,25 @@
         <finalName>${project.parent.build.finalName}</finalName>
         <defaultGoal>clean verify</defaultGoal>
         <plugins>
+            <!-- Detekt maven plugin for Code Analysis -->
+            <plugin>
+                <groupId>com.github.ozsie</groupId>
+                <artifactId>detekt-maven-plugin</artifactId>
+                <version>${detekt-maven-plugin-version}</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <input>"${basedir}/core/src/main/kotlin"</input>
+                            <input>"${basedir}/user-profile/src/main/kotlin"</input>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- rewrite run scripts with correct application jar name -->
             <plugin>
                 <groupId>com.google.code.maven-replacer-plugin</groupId>
@@ -105,6 +124,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
         <extensions>
             <!-- uploading the final product to ftp -->
             <extension>
