--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -239,12 +239,12 @@
 
     <pluginRepositories>
         <pluginRepository>
+            <id>bintray-ozsie-maven</id>
+            <name>Bintray Plugins Detekt</name>
+            <url>https://dl.bintray.com/ozsie/maven</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-            <id>bintray-ozsie-maven</id>
-            <name>bintray-plugins</name>
-            <url>https://dl.bintray.com/ozsie/maven</url>
         </pluginRepository>
 
         <pluginRepository>
@@ -255,6 +255,7 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
+
         <pluginRepository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
