--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -20,6 +20,11 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>simplednn</artifactId>
+            <version>0.11.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -46,6 +51,12 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>${telegram-bots-ver}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.haifengl</groupId>
+            <artifactId>smile-nlp</artifactId>
+            <version>1.5.1</version>
         </dependency>
 
     </dependencies>
