--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -21,6 +21,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-parent</artifactId>
+            <version>0.9.1</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
