--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -16,13 +16,13 @@
 
         <dependency>
             <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-parent</artifactId>
+            <artifactId>deeplearning4j-nn</artifactId>
             <version>${dl4j-ver}</version>
         </dependency>
 
         <dependency>
             <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-nn</artifactId>
+            <artifactId>deeplearning4j-parent</artifactId>
             <version>${dl4j-ver}</version>
         </dependency>
 
@@ -33,6 +33,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
@@ -40,7 +47,7 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
-            <version> ${nd4j-ver} </version>
+            <version>${nd4j-ver}</version>
         </dependency>
 
         <dependency>
@@ -52,6 +59,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
