--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -23,9 +23,5 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Email configurations
-spring.mail.host=localhost
-spring.mail.port=1025
-
-#Hermes configurations
-hermesToken={hermesToken}
-hermesBotName={hermesBotName}
+spring.mail.host=192.168.99.100
+spring.mail.port=32768
